# project_mirror

./: .gitignore  DEPLOYMENT.md  QUICKSTART_DEPLOY.md  README.md  SETUP.md  railway.toml
.github/workflows/: monthly-cleanup.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  railway.toml  railway.toml.example
backend/src/: auth_keycloak.rs  config.rs  main.rs  models.rs
backend/src/api/: chat.rs  episodes.rs  health.rs  insights.rs  maintenance.rs  mod.rs
backend/src/db/: mod.rs  neo4j.rs  neo4j_context.rs  postgres.rs  qdrant.rs  vector.rs
backend/src/llm/: embedding.rs  extractor.rs  mod.rs  openai.rs  prompts.rs
docs/: データライフサイクル.md  バックエンド実装ガイドライン.md  フロントエンド実装ガイドライン.md  設計修正指示書.md
frontend/: App.tsx  app.json  eas.json  package-lock.json  package.json  tsconfig.json
frontend/src/: theme.ts
frontend/src/api/: client.ts
frontend/src/auth/: keycloak.ts
frontend/src/components/: MirrorOrb.tsx
frontend/src/screens/: ChronicleScreen.tsx  ConstellationScreen.tsx  HomeScreen.tsx
scripts/: cleanup.sh
